--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - My First HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div id="content">
+		<h1>Hello world</h1>
+
+		<p>My partner is so coool we work on labs together and doodle on the board :)</p>
+		<img src="img/doodle.png" width="800">
+	</div>
 
 </body>
 </html>
