--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 </head>
 <body>
 	<main>
-		<h1>Sabrina's Page :)</h1><!-->comment open and /close</!-->
+		<h1>Sabrina's Page :)</h1><!--comment open and /close-->
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
 
 		<ul>
 			<li><p><a href="bruh.html">Youve come to the wrong place</a></p></li>
-			<!--->comment: this is a link embed</!--->
+			<!--comment: this is a link embed-->
 			<li><a href="">Link to idk</a></li>
 		</ul>
 
 		<img src="img/fumo.png" alt="Fumo">
 
-		<h2>Secondary heading</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div id="idName">
+			<h2>Secondary heading</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
 	</main>
 
 
