Changed the index.html file and Lab3 contents

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structures</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Lab 3 - File Structures</h1>
+	<p>This lab focused on creating a local file structure as well as adding and editing index.html files</p>
+
+	<h2>Process</h2>
+	<p>All steps were easy, since all I had to do was edit the existing index.html files within the art101 project folder. What I did struggle on was formating my pages cleanly and neatly in a way that looked visually appealing and organized.</p>
+
+	<h3>Outcome</h3>
+	<p>Here are some screenshots of the file structures of the index.html files in my folder directory (left) and in Atom (right).</p>
+
+	<img src="img/foldersc.png" alt="File Directory" style="width:45%">
+	<img src="img/atomsc.png" alt="Atom file structure" style="width:12%">
 
 </body>
 </html>
