--- a/index.html
+++ b/index.html
@@ -6,21 +6,29 @@
 </head>
 <body>
 	<main>
-		<h1>Sabrina's Page :)</h1><!--comment open and /close-->
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<h1>Sabrina's ART101 Page</h1><!--comment open and /close-->
 
-		<ul>
-			<li><p><a href="bruh.html">Youve come to the wrong place</a></p></li>
-			<!--comment: this is a link embed-->
-			<li><a href="">Link to idk</a></li>
-		</ul>
-
-		<img src="img/fumo.png" alt="Fumo">
-
-		<div id="idName">
-			<h2>Secondary heading</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div id="bio">
+			<img src="img/face.png" alt="Self Portrait" id="pic">
+			<p>Hi, my name is Sabrina. I like to draw and play video games. Nice to meet you.</p>
+			<p>٩(＾◡＾)۶⁀⊙෴☉⁀(ᗒᗣᗕ)՞ ٩(⊙‿⊙)۶꒰(･‿･)꒱Ⴚტ⊙·⊙ტჂ(⇀‸↼‶)⊃━☆ﾟ.*･｡ﾟ( ≚ᄌ≚ )>⌐□-□(╯•ᗣ•╰)</p>
+			<p>This ART101 class has rekindled my obsession with CSS ( ͡~ ͜ʖ ͡° )</p>
 		</div>
+
+		<div id="labsection">
+			<h2>ART101 Labs</h2>
+			<!--comment: this is an unordered list link embed-->
+			<ul>
+				<li><a href="lab1/index.html">Lab 1: Getting Started</a></li>
+				<li><a href="lab2/index.html">Lab 2: HTML & CSS Starter</a></li>
+				<li><a href="lab3/index.html">Lab 3: File Structures</a></li>
+				<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
+				<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
+				<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+			</ul>
+		</div>
+
+		<p>This page was generated from Wes' File Structure Template Repo.</p>
 	</main>
 
 
