--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
 <body>
 	<main>
 		<h1>Sabrina's ART101 Page</h1><!--comment open and /close-->
-
-		<div id="bio">
+		<div class="bio">
 			<img src="img/face.png" alt="Self Portrait" id="pic">
 			<p>Hi, my name is Sabrina. I like to draw and play video games. Nice to meet you.</p>
 			<p>٩(＾◡＾)۶⁀⊙෴☉⁀(ᗒᗣᗕ)՞ ٩(⊙‿⊙)۶꒰(･‿･)꒱Ⴚტ⊙·⊙ტჂ(⇀‸↼‶)⊃━☆ﾟ.*･｡ﾟ( ≚ᄌ≚ )>⌐□-□(╯•ᗣ•╰)</p>
-			<p>This ART101 class has rekindled my obsession with CSS ( ͡~ ͜ʖ ͡° )</p>
+			<p>Major: Art and Design: Games and Playable Media</p>
+			<p>Year: 3rd</p>
+			<p>Classes this quarter:
+				<ul>
+					<li>ART 101: Introduction to Computer Programming for the Arts</li>
+					<li>ARTG 80G: Visual Communication and Interaction Design</a></li>
+					<li>CMPM 35: Introduction to 3D Modeling</a></li>
+				</ul>
+			<p>PS: This ART101 class has rekindled my obsession with CSS ( ͡~ ͜ʖ ͡° )</p>
 		</div>
 
-		<div id="labsection">
+		<div class="labsection">
 			<h2>ART101 Labs</h2>
+			<p>Have a look at my labs!</p>
 			<!--comment: this is an unordered list link embed-->
 			<ul>
 				<li><a href="lab1/index.html">Lab 1: Getting Started</a></li>
