--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Pseudocoding and Problem-solving</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Challenge</h1>
+	<p>For Lab 4, we faced multiple challenges that hindered our ability to complete the tasks. We were not sure exactly what certain instructions were referring to and what was supposed to be included.</p>
+
+	<h2>Problems</h2>
+	<p> The problems we encountered include:</p>
+	<p> Atom's Teletype: </p>
+		<ul>
+			<li> We spent a bit of time trying to figure out how to use it. We couldn't figure out how to see the other person's tree and files. </li>
+			<li> We had to figure out how Teletype worked through trial and error, and clicking on things until we figured out how it worked. </li>
+		</ul>
+	<p> Task 3:</p>
+	<ul>
+		<li>We did not know which pseudocode we were supposed to use (from Task 1 or 2) or if we had to use both.</li>
+		<li> The instructions were a bit vague, and we were confused on what Javascript was for when using HTML. What was the point of doing the comments in Javscript if we were gonna put it in HTML? </li>
+		<li> We weren't sure if we had to modify the Author Block. (and we didn't understand what 'use period' meant). </li>
+		</ul>
+	<p> Task 4: </p>
+	<ul>
+		<li> We didn't know what the "code" tag exactly did (even when looking it up and comparing the changes with and without "code", there seemed to be no difference except the change in font).</li>
+		<li>We didn't know what the "pre" tag did either (until looking it up), but we could see the difference in the size of the font. </li>
+	</ul>
+
+	<h3>Results</h3>
+		<p> This is our results: </p>
+		<p>We included both pseudocodes from Task 1 and Task 2 below since we did not know which one to use.</p>
+
+<p>Task 1 pseudocode</p>
+	<pre> // How to have a decent sleeping schedule.
+	  // Get ready for bed at a certain time.
+	    // Recommended: According to https://health.clevelandclinic.org/what-time-should-i-go-to-bed/, the optimal sleeping time is 10PM.
+	    // Take a shower, brush your teeth, do whatever skincare routine you need before 10PM.
+	  // Set an alarm for the next day
+	    // Recommended: According to https://www.womanandhome.com/health-wellbeing/best-time-to-sleep-and-wake-up/#:~:text=The%20best%20time%20to%20wake,the%20body's%20processes%20to%20work. the optimal time to wake up is from 7AM to 9AM to get seven to nine hours of sleep.
+	  // Get on the bed, lay down and close your eyes.
+	    // If you can’t fall to sleep easily, some tips to help your sleep better include:
+	      // Find a comfortable position.
+				// Turn off all electronics.
+	      // Drinking warm milk.
+	      // Have a good sleeping environment - setting your thermostat around 68 degrees and having white noise (such a fan, Youtube rain noises video, etc.) in the background may help.
+	      // Close all lights and curtains for optimal darkness.
+	  // Keep sleep schedules consistent for optimal productivity and energy. </pre>
+
+<p>Task 2 pseudocode</p>
+<pre><code>//How to open your FREE and OPEN SOURCE art software (Krita).
+
+// Go to https://krita.org/en/download/krita-desktop/
+// Click the huge, blue download button that says, “Get Krita Now” on the right side of the screen.
+// Depending on your hardware:
+  // Windows - Click on “Windows Installer 64-bit”
+    // If you need the Windows 32-bit version, scroll down where it says “Download Older Versions” and click on the “Windows 32-bit version” button.
+  // macOS - Click on “All Download Versions” under the blue button and click on “macOS Installer”
+  // Linux - Click on “All Download Versions” under the blue button and click on “Linux 64-bit Appimage”
+// Wait for the software installation package to download
+  // Look for the installation package in your in your file directory (downloads folder)
+  // Click ‘yes’ when prompted to allow changes on your computer.
+  // Choose your preferred language.
+  // When you see the setup page, click next to continue.
+// Accept the terms of the License Agreement and click next to continue.
+// Install and Run the application.
+  // Choose your desired destination folder for the application to appear in.
+    // Allow desktop shortcut for the icon to appear on your desktop
+  // Optional: Keep all check boxes and agree to allow Krita shell to install
+// Chose a Start Menu Folder
+  // Recommended: Keep it as ‘Krita’ and click next
+// Confirm Installation
+  // Recommended: Keep checkbox checked for creating a desktop icon
+// Click install and wait for the installation to complete.
+  //  When the installation is completed, click next to continue.
+  // Finally, click Finish.
+// Go to your desktop and double click the Krita application.
+// Enjoy your new, shiny free and open source drawing software!</pre></code>
 
 </body>
 </html>
