--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Lab 5: Data Types and Variables</h1>
+	<p> This Lab experiments with Javascript data types and variables.</p>
+	<img src ="img/my_beautiful_camry.jpg" style = "float:right; width:500px">
+		<h2>Challenge</h2>
+		<div>
+			<p> One of the challenges is picking out a car, considering our main
+				 transportation is the bus, and we didn't know the make/model of the
+				 Santa Cruz Metro Bus. We settled on a Light Blue 2012 Camry. </p>
+		</div>
+
+		<h2> Problems</h2>
+		<div>
+			<p> We did not encounter any major problems.</p>
+		</div>
+
+		<h2> Results </h2>
+		<div>
+			<p> Here are the results of our car details:</p>
+		</div>
+
+		<h3> Script Output </h3>
+		<div class = output>
+			<script type = "text/javascript" src ="js/lab.js"></script>
+		</div>
 
 </body>
 </html>
