--- a/lab7/index.html
+++ b/lab7/index.html
@@ -27,10 +27,12 @@
 		<h2> Results </h2>
 		<div>
 			<p> Here are the results of our name sorting function:</p>
+			<p> We implemented a button too! (PS: it does not work completely).</p>
 		</div>
 
 		<div>
 			<h2>Script Output</h2>
+			<button onclick="sortUserName()">Add another name</button>
 			<script src="js/lab.js"></script>
 	  </div>
 
